navdrawer: correct floating card spacing with mini

--- a/components/complex/navdrawer/style.scss
+++ b/components/complex/navdrawer/style.scss
@@ -126,8 +126,8 @@
 
 .mdw-navdrawer__account {
   display: grid;
-  grid-template-rows: auto minmax(64px,auto);
-  grid-template-columns: auto minmax(0,auto);
+  grid-template-rows: auto minmax(64px, auto);
+  grid-template-columns: auto minmax(0, 56px);
   position: relative;
   &::after {
     // Maintains a minimum 16:9 ratio
@@ -344,7 +344,7 @@
       padding-left: 20px;
       padding-right: 20px;
       justify-content: center;
-      grid-column-end: 3;
+      grid-column-end: 2;
     }
     
     .mdw-navdrawer__avatars-current {
@@ -373,7 +373,8 @@
       }
     }
     .mdw-navdrawer__account {
-      grid-template-rows: auto 0;
+      grid-template-rows: auto;
+      grid-template-columns: auto;
       &::after {
         content: none;
       }
